--- a/frontend/src/components/ProblemScreen.css
+++ b/frontend/src/components/ProblemScreen.css
@@ -102,22 +102,30 @@
   width: 100%;
 }
 
-/* Scrollbar styling for problem-left */
-.problem-left::-webkit-scrollbar {
+/* Scrollbar styling for problem containers */
+.problem-left::-webkit-scrollbar,
+.problem-center::-webkit-scrollbar,
+.problem-right::-webkit-scrollbar {
   width: 6px;
 }
 
-.problem-left::-webkit-scrollbar-track {
+.problem-left::-webkit-scrollbar-track,
+.problem-center::-webkit-scrollbar-track,
+.problem-right::-webkit-scrollbar-track {
   background: #2d2d2d;
   border-radius: 3px;
 }
 
-.problem-left::-webkit-scrollbar-thumb {
+.problem-left::-webkit-scrollbar-thumb,
+.problem-center::-webkit-scrollbar-thumb,
+.problem-right::-webkit-scrollbar-thumb {
   background: #667eea;
   border-radius: 3px;
 }
 
-.problem-left::-webkit-scrollbar-thumb:hover {
+.problem-left::-webkit-scrollbar-thumb:hover,
+.problem-center::-webkit-scrollbar-thumb:hover,
+.problem-right::-webkit-scrollbar-thumb:hover {
   background: #5a67d8;
 }
 
@@ -1248,7 +1256,7 @@
   padding: 0.75rem;
   height: 100%;
   max-height: 100%;
-  overflow: hidden;
+  overflow-y: auto;
 }
 
 .problem-right {
@@ -1261,7 +1269,7 @@
   justify-content: flex-start;
   height: 100%;
   max-height: 100%;
-  overflow: hidden;
+  overflow-y: auto;
 }
 
 .coding-section {
